eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safe-as-houses-api-service
spec:
  selector:
    app: safe-as-houses-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
