eks/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: safe-as-houses-ingress-grpc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: "gapi.safe-as-houses.jtaylor.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: safe-as-houses-api-service
                port:
                  number: 90
  tls:
    - hosts:
        - gapi.safe-as-houses.jtaylor.io
      secretName: safe-as-houses-gapi-cert
