eks/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: safe-as-houses-ingress-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "safe-as-houses.jtaylor.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: safe-as-houses-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - safe-as-houses.jtaylor.io
      secretName: safe-as-houses-api-cert
